# data_generator

./: __init__.py  environment.yml  pyproject.toml  requirements.txt  setup.py
data_generator/common/: utils.py
data_generator/labeler/: core.py
data_generator/saver/: core.py  json.py
data_generator/transformers/data_augmentation/: flip.py
data_generator/transforms/: __init__.py  core.py  data_augmentation.py  element.py  transformer.py  utils.py
data_generator/transforms/data_augmentation/: flip.py  rotate.py
data_generator/transforms/domain_randomization/: objects_random_position.py
data_generator/transforms/labeler/: core.py
data_generator/transforms/saver/: core.py  csv.py  json.py
examples/: data_generator.py
pkg/common/: __init__.py
pkg/saver/: csv.py
pkg/transforms/: classes.py  utils.py
test/: test_transformer.py  test_transformer.yml
